re PR c++/53202 (Copy constructor not called when starting a thread)

PR c++/53202
	* semantics.c (build_data_member_initialization): Always keep
	initializer for empty base.
	(cxx_eval_bare_aggregate): Discard it here.

From-SVN: r188940